# masptracer

./: CMakeLists.txt  README.md  camera.c  camera.h  cylinder.c  demo_1b.scene  input.dimensions  main.c  ppm_file.c  ppm_file.h  ppmconv.c  scene.c  scene.h  scene_config.c  scene_config.h  scene_desc.h  scene_test.c  sphere.c  triangle.c  vec.c  vec.h
scenes/: cylinder_box.scene  cylinder_persp.scene  cylinder_updir.scene  demo_1b.scene  gen.py  in_cylinder.scene  invalid_args.scene  many_spheres.scene  small.scene  test.scene
scenes/1b/: ambient.scene  depth_cue.scene  diffuse.scene  diffuse_light.scene  direct_lights.scene  falloff.scene  light_att.scene  many_point_lights.scene  point_lights.scene  soft_shadows.scene  spec_light.scene  specular.scene
scenes/1c/: flat_cube.scene  low_poly_sphere.scene  shaded_cube.scene  textured_cube.scene
scenes/1d/: infinite_mirrors.scene  line_of_squares.scene  mirror_sphere.scene  spheres_reflected.scene  textured_cube_reflected.scene  transparent_sphere.scene  world.ppm
